# property_models

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
data/processed/: country_codes.csv
data/processed/AUS/: suburb_to_postcode.csv
experiments/00_initial_tests/: 00_test_imports.ipynb  01_testing_pyap.ipynb  02_testing_property_model.ipynb  03_historical_csv.ipynb  04.1_nested_enum.ipynb  04.2_testing_metadata.ipynb  04_property_info.ipynb
experiments/01_checking_site_contents/: 01_domain_property_profile.ipynb  02.1_old_listings_full_test.ipynb  02_old_listings_real_estate.ipynb
models/00_initial_data_gathering/: 01_post_codes_and_country_codes.ipynb
property_models/: __init__.py  constants.py  exceptions.py  models.py  utils.py
property_models/aus/: __init__.py
property_models/aus/old_listings/: __init__.py  constants.py  extract.py  old_listings.py  parse.py  process.py  utils.py
property_models/dev_utils/: fixtures.py
tests/: test_constants.py  test_import.py  test_models.py
tests/AUS/: test_old_listings.py
