[project]
authors = [{name = "Andre Medina", email = "AndreMedina@hotmail.com.au"}]
description = "Add a short description here"
name = "property_models"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["au-address-parser>=1.0.0,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
property_models = { path = ".", editable = true }

[tool.pixi.tasks]
tests = "pytest"
python_dir = "which python"

[tool.pixi.dependencies]
rich = ">=13.9.3,<14"
pytest = "*"
pre-commit = ">=4.0.1,<5"
ipykernel = ">=6.29.5,<7"
selenium = "==4.2.0"
certifi = ">=2024.8.30,<2025"
bs4 = ">=4.12.3,<5"
pydantic = ">=2.9.2,<3"
polars = ">=1.11.0,<2"
pyarrow = ">=17.0.0,<18"
